--- a/css/index.css
+++ b/css/index.css
@@ -1,511 +1,525 @@
-/* General Styles */
-link[rel="icon"] {
-    border-radius: 500%;
-    /* overflow: hidden; */
+/* General styling */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Roboto, Helvetica, sans-serif;
+    overflow-x: hidden;
     background-color: #121212;
-    color: #BFBFBF;
-    height: 100%;
+    color: aliceblue;
 }
 
-/* Header Styles */
-.header {
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+#home, #about-me, #tech-skills{
+    background-color: #121212;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 15px;
-    
+    justify-content: center;
 }
 
-.headerName {
-    margin: 0;
-    font-size: 1.5em;
-    /* color: #a7f3d0; */
+#home, #about-me{
+    height: 100vh;
+}
+#projects{
+    background-color: #121212;
 }
 
-.contact{
-    background-color: #131314;
-}
-.social-links a {
-    margin-right: 10px;
-    text-decoration: none;
-    font-size: 1.5em;
-    color: #fff;
-}
-.social-links a:hover{
-  font-size: 2em;
-}
-.social-links a:nth-child(7) {
-  font-size: 1.5em;
-  color: white;
-}
-.social-links a:nth-child(8) {
-  font-size: 1.5em;
-  color: white;
-}
-
-
-.recuriter-link,
-.resume-link {
-    background-color: #8E44AD;
-    border-radius: 15px 0 15px 0;
-    border: none;
-    color: #27272a;
-    padding: 6px 12px;
+header {
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1em;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.resume-link:hover, .recuriter-link:hover {
-    background-color: #8922b4;
-}
-
-.bi-github:hover{
-  color: #FFB0B0;
-}
-.bi-file-earmark-text:hover{
-  color: #ba9607;
-}
-
-.bi-twitter:hover{
-  color: #4bbfe9;
-}
-
-.bi-instagram:hover {
-  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-  -webkit-background-clip: text;
-  color: transparent;
-  background-clip: text;
-}
-
-.bi-linkedin:hover{
-  color: #4292e2; 
-}
-.bi-envelope:hover{
-  background: linear-gradient( Red 55%, white 50%);
-  -webkit-background-clip: text;
-  color: transparent;
-  background-clip: text;
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-/* Section Styles */
-.content {
+    position: fixed;
+    width: 100%;
+    padding: 15px 0;
+    z-index: 999;
+    background-color: #121212;
     display: flex;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.name-header {
+    font-size: 20px;
+    color: white;
+    display: none;
+}
+
+/* Main Navigation */
+header nav a {
+    text-decoration: none;
+    color: white;
+    margin: 0 15px;
+    transition: color 0.3s;
+    font-size: 20px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+
+header nav a.active {
+    color: orange;
+}
+
+header nav a:hover {
+    color: orange;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 1200px;
     padding: 20px;
-    height: 80vh;
 }
 
 .left {
-    flex: 0 0 17%;
-    padding: 0px 20px 20px 20px;
-    margin-right: 18px;
-    border-radius: 5px;
-    overflow: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    color: white;
-    height: 99%;
-    background-color: #171717;
+    flex: 1;
+    min-width: 300px;
+    display: flex;
+    justify-content: center;
 }
 
 .right {
-    flex: 0 0 75%;
-    padding: 0px 20px 20px 20px;
-    border-radius: 5px;
-    overflow: auto;
-    color: #fff;
-    background-color: #171717;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    height: 95%;
-}
-
-.nav-option {
-  cursor: pointer;
-  margin-bottom: 10px;
-  padding: 8px 8px;
-  color: #fafafa;
-  border-width: 2px 2px 0 2px;
-  border-style: solid;
-  border-color: #F1FAFF;
-  border-radius: 20px 100px 0 0;
-  box-shadow: 0 -5px 20px 0 rgba(80, 79, 79, 0.2);
-  position: relative;
-  transition: color 0.3s; 
-}
-
-.nav-option:active {
-  transform: translateX(5px);
-  box-shadow: none;
-}
-
-.nav-option:hover {
-  /* color: #3e94f5;  */
-  /* background: linear-gradient(to bottom, #99DDFF, #F1FAFF); */
-  border-color: #99DDFF;
-  border: 2px 2px 0px 2px solid #99DDFF;
-}
-
-
-.nav-option:hover:after {
-  opacity: 1;
-}
-
-/* Profile Section Styles */
-.left {
-    position: relative;
-}
-
-.above {
+    flex: 1;
+    min-width: 300px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 20px 0px 20px;
+    justify-content: center;
 }
 
-.line {
-    width: 100%;
-    height: 2px;
-    background-color: #8922b4;
-    margin: 10px 0;
-    align-items: center;
-
+.right-home {
+    position: relative;
+    left: 50px;
 }
 
-.profile-image img {
-    border-radius: 50%;
-    width: 7em;
-    height: 7em;
-    object-fit: cover;
-    border: 1px solid #e4e4e7;
-    transition: transform 0.5s ease, transform-origin 0.3s ease, scale 0.3s ease;
+.left .home-name, .right .profile-image {
+    margin-top: auto;
 }
 
-.profile-image img:hover {
-    transform: perspective(1500px) rotateY(30deg) scale(1.1);
+.home-name {
+    color: aliceblue;
+    text-align: center;
 }
-
-
 
 .name {
-    color: #e4e4e7;
-    margin-top: 10px;
-    font-size: 1.5em;
-}
-/* Add this to your existing CSS */
-
-/* Scrollbar Styles */
-::-webkit-scrollbar {
-    height: 5px; /* for horizontal bar */
-    width: 5px;  /* for vertical bar */
-    display: none; /* Hide the scrollbar by default */
-    transition: opacity 0.3s ease; /* Add a transition effect for smooth appearance */
+    font-size: 5em;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: rgba(243, 242, 242, 0.3);
-    border-radius: 6px;
-    width: 5px; /* Adjust the width as needed */
-}
-
-::-moz-scrollbar {
-    height: 5px; /* Adjust the height as needed */
-    width: 5px; /* Adjust the width as needed */
-    display: none; /* Hide the scrollbar by default */
-    transition: opacity 0.3s ease; /* Add a transition effect for smooth appearance */
-}
-
-::-moz-scrollbar-thumb {
-    background-color: rgba(243, 242, 242, 0.3);
-    border-radius: 6px;
-}
-
-/* github page */
-
-#github-repos {
-    /* margin: 5vh 2vh; */
-    height: 100vh;
-    /* border: 1px solid #ddd; */
-    background: linear-gradient(#0C2D57);
-    text-align: center;
-    position: relative;
-}
-
-
-.git-line {
-  width: 100%;
-  height: 1.2px;
-  background-color: #fff;
-  margin: 10px 0;
-  align-items: center;
-
-}
-
-.carousel-container {
-    display: flex;
-    /* background: linear-gradient(#0C2D57,#010409 ); */
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.profession {
+    font-size: 20px;
+    white-space: nowrap;
     overflow: hidden;
-    position: relative;
+    border-right: .15em solid orange;
+    animation: typing 3s steps(20, end);
 }
 
+/* keyframes */
+@keyframes typing {
+    from { width: 0; }
+}
 
+.profile-image {
+    width: 80%;
+    max-width: 30em;
+    height: auto;
+    object-fit: cover;
+}
 
-.carousel {
-    width: 30%;
-    height: 60%;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #0d1117;
-    opacity: 0;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: transform 1s ease, opacity 0.5s ease;
-    text-align: center;
-    color: white;
+/* Tech skills section */
+#tech-skills {
     display: flex;
     flex-direction: column;
 }
 
-.carousel.active {
-    opacity: 1;
+/* Tech stack */
+h2 {
+    text-align: center;
 }
 
-.controls {
-    position: absolute;
+.line-right-div {
     width: 50%;
-    left: 25%;
+    height: 2px;
+    background-color: #8922b4;
+    margin: 10px 225px;
+}
+
+.tech-stack {
     display: flex;
-    justify-content: space-between;
-    top: 50%;
-    transform: translateY(-50%);
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
 }
 
-#prevBtn,
-#nextBtn {
-    background-color: #8b22b8;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 4px;
+.tech-category {
+    width: 150px;
+    background-color: #2a2a2b;
+    margin: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 -5px 20px 0 rgba(23, 22, 22, 0.5);
 }
 
-#prevBtn:hover, #nextBtn:hover{
-  background-color: #6c1f8d;
+.tech-category h2 {
+    color: #e4e4e7;
+    font-size: 20px;
+    border-bottom: solid white 1px;
+    padding-bottom: 5px;
 }
 
-.carousel-container .heading {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 30px;
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
-.carousel span a {
-    font-size: 1.5em;
-    color: #fff;
+li {
+    background-color: #14131a;
+    padding: 8px;
+    margin: 5px;
+    border-radius: 5px;
+    color: #e4e4e7;
+}
+
+li.highlight {
+    border: 1px solid var(--highlight-border-color);
+}
+
+li.highlight.beg {
+    --highlight-border-color: #00ff00;
+}
+
+li.highlight.int {
+    --highlight-border-color: #e5ff00;
+}
+
+li.highlight.adv {
+    --highlight-border-color: #ff0000;
+}
+
+.tech-legend {
+    width: fit-content;
+}
+
+.tech-legend ul {
+    display: flex;
+    flex-direction: row;
+}
+
+/* Projects section */
+#projects {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-top: solid white 1px;
+    border-bottom: solid white 1px;
+    padding: 20px;
+    color: #f1f1f1; /* Light text color */
+}
+
+/* Project Navigation */
+.prj-nav {
+    position: relative;
+    top: 5vh; /* Position 5vh below the top of the viewport */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 2; /* Ensure it stays above other content */
+    padding: 20px 0px;
+}
+
+.prj-nav a {
     text-decoration: none;
-    display: inline-block;
+    color: white;
+    margin: 0 15px;
+    transition: color 0.3s;
+    font-size: 20px;
+    padding-bottom: 10px;
+    cursor: pointer;
 }
 
-.git-content {
+.prj-nav a.active {
+    color: orange;
+}
+
+/* Rest of your CSS */
+.projs {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5vh;
+}
+
+.prj-type {
+    display: none;
+    width: 100%;
+}
+
+.prj-type.active {
+    display: block;
+}
+
+/* Project container */
+.prj-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    align-items: start;
+    justify-items: stretch;
+}
+
+/* Individual project */
+.prj {
+    width: calc(50% - 20px); /* Adjust the width here */
+    background-color: #2c2c2c; /* Dark background */
+    color: #f1f1f1; /* Light text color */
+    border-radius: 10px; /* Rounded corners */
+    padding: 20px; /* Padding for inner content */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+    font-family: Arial, sans-serif; /* A clean font */
+}
+
+/* Project header */
+.prj-head {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #444; /* Subtle bottom border */
+    padding-bottom: 5px;
 }
 
-.git-visibility {
-    border: 1px solid #758d97;
-    border-radius: 20px;
-    padding: 1px 10px 3px 10px;
-    color: #758d97;
+.heading {
+    font-size: 1.5em; /* Larger font size */
+    font-weight: bold; /* Bold text */
 }
 
-.git-tech-stack {
+.prj-link {
+    font-size: 1em; /* Normal font size */
+    color: #61dafb; /* Accent color for link */
+    text-decoration: none; /* No underline */
+}
+
+.prj-link:hover {
+    text-decoration: underline; /* Underline on hover */
+}
+
+/* Project description */
+.project-description {
+    text-align: justify; /* Justify the text */
+    line-height: 1.6; /* Improve readability with line height */
+}
+
+/* Media Query for smaller screens */
+@media (max-width: 768px) {
+    .prj {
+        width: 100%; /* Full width for smaller screens */
+    }
+}
+
+/* Research section */
+
+#research {
+    position: relative;
+    border-top: solid white 1px;
+    border-bottom: solid white 1px;
+    padding: 20px;
+    color: #f1f1f1; /* Light text color */
+}
+
+/* Research header */
+.research-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.research-header h2 {
+    font-size: 2em; /* Larger font size for the header */
+    font-weight: bold; /* Bold text */
+    position: relative;
+    top: 5vh;
+}
+
+/* Research container */
+.research-container {
     display: flex;
-    text-align: justify;
-    /* flex-direction: column; */
-    /* flex-wrap: wrap; */
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
 }
 
-.tech-stack-left {
-    margin-right: 10px;
-    width: 140px;
+/* Individual research paper */
+.research-paper {
+    background-color: #2c2c2c; /* Dark background */
+    color: #f1f1f1; /* Light text color */
+    border-radius: 10px; /* Rounded corners */
+    padding: 20px; /* Padding for inner content */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+    font-family: Arial, sans-serif; /* A clean font */
+    width: calc(100% - 40px); /* Adjust the width to fit within the container */
+    /* max-width: 800px;  */
+    margin-bottom: 20px; /* Space between the papers */
 }
-
-.git-tech-container {
+/* Paper header */
+.paper-head {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #444; /* Subtle bottom border */
+    padding-bottom: 5px;
 }
 
-.item {
-    padding: 3px 10px;
-    margin: 5px;
-    color: white;
-    border: 1px solid white;
-    border-radius: 5px;
-    font-size: medium;
-    background-color: #010409;
+.heading {
+    font-size: 1.3em; /* Larger font size */
+    font-weight: bold; /* Bold text */
 }
 
-/* Add your styles here */
-.hidden {
-  display: none;
+.paper-link {
+    font-size: 1em; /* Normal font size */
+    color: #61dafb; /* Accent color for link */
+    text-decoration: none; /* No underline */
 }
 
-.contact-section {
-  position: fixed;
-  top: 50%;
-  right: -33px;
-  transform: rotate(270deg);
+.paper-link:hover {
+    text-decoration: underline; /* Underline on hover */
 }
 
-.contact-section button {
-  font-size: 25px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 15px 15px 0 0;
-  background-color: #8922b4; /* Adjust the background color as needed */
-  color: #fff; /* Text color */
-  cursor: pointer;
-}
-
-.contact-section button:hover {
-  background-color: #69198b; /* Adjust the hover background color */
-  font-size: 30px;
-  padding: 12px 15px;
-
-}
-
-.contact-section:hover .contact-content {
-  top: -70%;
-}
-
-.contact-content {
-  position: fixed;
-  top: -90%;
-  right: 30px;
-  border-radius: 5px;
-  transform: translate(0%, -50%) rotate(90deg); /* rotate*/
-  transition: opacity 0.3s ease, top 1s ease;
-  background-color: #fff; 
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 9;
-  width: 30px;
-}
-.contact-content:hover{
-  padding-bottom: -10px;
-}
-
-.contact-options {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-}
-
-.contact-options a {
-  margin-bottom: 10px;
-  text-decoration: none;
-  color: #333; 
-  font-size: 20px; 
-}
-
-.contact-options a:hover{
-  font-size: 30px;
-  align-content: center;
-  
-}
-
-.check{
-  height: 100vh;
-  border: 1px solid white;
-}
-
-/* Styles for the footer */
-/* Styles for the footer */
-footer {
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: space-between;
-  background-color: #d09fe5;
-  padding: 20px;
-  color: #0C2D57;
-}
-
-.leftf {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20vh;
-}
-
-.leftf span {
-  font-size: 18px;
-  font-weight: bold;
-  color: #EFECEC;
-}
-
-.mail, .msg {
-  margin: 5px 0;
-}
-
-.rightf {
-  position: relative;
-  display: flex;
-  left: 15%;
-  /* align-items: flex-end; */
-
-}
-
-.rightf a {
-  text-decoration: none;
-  font-size: 20px;
-  color: #EFECEC;
-  margin-left: 20px;
-}
-
-.copyright {
-  margin-top: auto; /* Set margin-top to auto to push it to the bottom */
-  font-size: 14px;
-  align-items: center;
-  position: relative;
-  left:-45%
+/* Paper description */
+.paper-description {
+    text-align: justify; /* Justify the text */
+    line-height: 1.6; /* Improve readability with line height */
 }
 
 
-/* Media query for responsive design */
-@media screen and (max-width: 600px) {
-  footer {
-      flex-direction: column;
-      align-items: center;
-  }
+/* Tablets and smartphones */
+@media (max-width: 768px) {
+    .name-header {
+        font-size: 1.5em;
+        position: fixed;
+        top: 15px;
+        left: 15px;
+        display: inline-block;
+    }
 
-  .rightf {
-      margin-top: 10px;
-      margin-right: 20vh;
-  }
+    .menu-icon {
+        display: block;
+        color: white;
+        position: fixed;
+        top: 15px;
+        right: 15px;
+        z-index: 1000; /* Ensures the icon is above other elements */
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #121212;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        padding: 10px 0;
+    }
+
+    .nav-links a {
+        padding: 10px 20px;
+        font-size: 1.5em;
+    }
+
+    .profile-image {
+        height: 20em;
+        width: 20em;
+        max-width: 25em;
+    }
+
+    .name {
+        font-size: 3em;
+    }
+
+    .profession {
+        font-size: 1.5em;
+        text-align: center;
+    }
+
+    .content-wrapper {
+        flex-direction: column-reverse;
+    }
+
+    .home-name {
+        position: relative;
+        top: 20px;
+    }
+
+    .prj-nav {
+        display: block;
+    }
+}
+
+@media (max-width: 480px) {
+    .name-header {
+        font-size: 16px;
+    }
+
+    .menu-icon {
+        font-size: 30px;
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        margin: 0 5px;
+    }
+
+    .content-wrapper {
+        flex-direction: column-reverse;
+    }
+
+    .profile-image {
+        /* width: 70%; */
+        max-width: 10em;
+    }
+
+    .name {
+        font-size: 2.5em;
+    }
+
+    .profession {
+        font-size: 1em;
+        text-align: center;
+    }
+}
+
+/* Additional styles for menu icon */
+.menu-icon {
+    display: none;
+    cursor: pointer;
+}
+
+.nav-links {
+    display: flex;
+    gap: 15px;
+}
+
+@media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    .nav-links {
+        display: none;
+    }
+}
+
+.nav-links.open {
+    display: flex;
 }
